[tool.poetry]
name = "dz19-2"
version = "0.1.0"
description = ""
authors = ["Pavel Novikov <pavlik.novik@yandex.ru>"]
readme = "README.md"
packages = [{include = "dz19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
